--- a/site-app/src/components/App.css
+++ b/site-app/src/components/App.css
@@ -19,3 +19,8 @@ main {
 .justify-text {
     text-align: justify;
 }
+blockquote{
+  margin: 20px 0;
+  padding-left: 1.5rem;
+  border-left: 5px solid #0288d1; /* Just change the color value and that's it*/
+}
